syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest {
  int32 userId = 1;
}

message GetUserByIdResponse {
  int32 userId = 1;
  string username = 2;
  string email = 3;
}
